@@ -108,6 +108,8 @@ and Jarek Czekalski for contributing to this release.
 }}}
 {{{ UI
 
+- Added Icons to the VFS Browser context menu (Matthieu Casanova)
+
 - Combined Global and Plugin options into a single pane, making Optional plugin
 	obsolete. (Alan Ezust - # 3455602)
 
